Fix alignment and h2 text color

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -10,14 +10,20 @@ h1 {
     text-align: center;
 }
 
+a {
+    color: aquamarine;
+    font-size: 16px;}
+
 h2 {
     font-size: 42px;
+    color: white;
     font-weight: 300;
 }
 
 h2 p{
     font-size: 21px;
     color: gray;
+    text-align: center;
 }
 
 footer p{
